adjust header-after margin and fix font size too big

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -33,12 +33,8 @@ li{
     white-space:initial;
     transition: transform .5s ease-out;
     overflow: hidden;
-    @include tablet{
-      height: 200px;
-      font-size: 1.2*$base-size;
-    }
+    
     @include desktop{
-      font-size: 1.5*$base-size;
       transform: translateY(210px);
     }
   }
