--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -11,10 +11,10 @@ p{
   text-align: center;
   padding: 3% 0;
   @include tablet{
-    font-size: 1.5 * $base-size;
+    // font-size: 1.5 * $base-size;
   }
   @include desktop{
-    font-size: 2 * $base-size;
+    // font-size: 2 * $base-size;
   }
 }
 body{
